# solpm

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  error.rs  main.rs  utils.rs
src/commands/: add.rs  auth.rs  codegen.rs  constants.rs  init.rs  install.rs  mod.rs  publish.rs  types.rs
